syntax = "proto3";

package at.fhj.swengb.apps.battleship;

option java_package         = "at.fhj.swengb.apps.battleship";
option java_outer_classname = "BattleShipProtobuf";


message BattleShipGame {
    BattleField battleField = 1;
    repeated Pos clickedCells = 2;
}

message BattleField {
    int32 width = 1;
    int32 height = 2;
}

message Vessel {
    string vesselName = 1;
    Pos startPos = 2;
    string direction = 3;
    int32 size = 4;
}

message Pos {
    int32 x = 1;
    int32 y = 2;
}